--- a/readme.html
+++ b/readme.html
@@ -214,7 +214,6 @@
     <!-- Hero Section -->
     <section class="relative h-screen w-full overflow-hidden bg-cream">
         <div class="absolute inset-0">
-            <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?w=1920&q=80" 
                  alt="Premium leather accessories" 
                  class="w-full h-full object-cover opacity-90 hero-image"
                  style="transform: scale(1.1);">
@@ -257,7 +256,6 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
                 <div class="category-card relative h-[500px] overflow-hidden cursor-pointer group">
-                    <img src="https://images.unsplash.com/photo-1627123424574-724758594e93?w=800&q=80" 
                          alt="Leather Belts" 
                          class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition-colors duration-500"></div>
@@ -268,7 +266,6 @@
                 </div>
 
                 <div class="category-card relative h-[500px] overflow-hidden cursor-pointer group lg:col-span-2">
-                    <img src="https://images.unsplash.com/photo-1553062407-98eeb64c6a62?w=1200&q=80" 
                          alt="Premium Wallets" 
                          class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition-colors duration-500"></div>
@@ -279,7 +276,6 @@
                 </div>
 
                 <div class="category-card relative h-[500px] overflow-hidden cursor-pointer group">
-                    <img src="https://images.unsplash.com/photo-1575428652377-a2697242636b?w=800&q=80" 
                          alt="Caps & Headwear" 
                          class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition-colors duration-500"></div>
@@ -310,7 +306,6 @@
                 <!-- Product 1 -->
                 <div class="product-card group cursor-pointer" onclick="addToCart('Heritage Leather Belt')">
                     <div class="relative overflow-hidden bg-gray-100 aspect-[3/4] mb-4">
-                        <img src="https://images.unsplash.com/photo-1624222247344-550fb60583dc?w=600&q=80" 
                              alt="Heritage Leather Belt" 
                              class="product-image w-full h-full object-cover">
                         <button class="absolute bottom-4 left-4 right-4 bg-white py-3 text-xs tracking-widest opacity-0 group-hover:opacity-100 transition-opacity duration-300 hover:bg-charcoal hover:text-white">
@@ -325,7 +320,6 @@
                 <!-- Product 2 -->
                 <div class="product-card group cursor-pointer" onclick="addToCart('Minimalist Card Holder')">
                     <div class="relative overflow-hidden bg-gray-100 aspect-[3/4] mb-4">
-                        <img src="https://images.unsplash.com/photo-1606503825008-909a6184cd42?w=600&q=80" 
                              alt="Minimalist Card Holder" 
                              class="product-image w-full h-full object-cover">
                         <div class="absolute top-4 left-4 bg-charcoal text-white text-[10px] tracking-widest px-3 py-1">BESTSELLER</div>
@@ -340,9 +334,7 @@
 
                 <!-- Product 3 -->
                 <div class="product-card group cursor-pointer" onclick="addToCart('Wool Blend Cap')">
-                    <div class="relative overflow-hidden bg-gray-100 aspect-[3/4] mb-4">
-                        <img src="https://images.unsplash.com/photo-1588850561407-ed78c282e89b?w=600&q=80" 
-                             alt="Wool Blend Cap" 
+                    <div class="relative overflow-hidden bg-gray-100 aspect-[3/4] mb-4">                             alt="Wool Blend Cap" 
                              class="product-image w-full h-full object-cover">
                         <button class="absolute bottom-4 left-4 right-4 bg-white py-3 text-xs tracking-widest opacity-0 group-hover:opacity-100 transition-opacity duration-300 hover:bg-charcoal hover:text-white">
                             QUICK ADD
@@ -356,7 +348,6 @@
                 <!-- Product 4 -->
                 <div class="product-card group cursor-pointer" onclick="addToCart('Bi-Fold Wallet')">
                     <div class="relative overflow-hidden bg-gray-100 aspect-[3/4] mb-4">
-                        <img src="https://images.unsplash.com/photo-1548036328-c9fa89d128fa?w=600&q=80" 
                              alt="Bi-Fold Wallet" 
                              class="product-image w-full h-full object-cover">
                         <button class="absolute bottom-4 left-4 right-4 bg-white py-3 text-xs tracking-widest opacity-0 group-hover:opacity-100 transition-opacity duration-300 hover:bg-charcoal hover:text-white">
@@ -384,7 +375,6 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                 <div class="relative">
                     <div class="absolute -top-4 -left-4 w-full h-full border border-taupe/30"></div>
-                    <img src="https://images.unsplash.com/photo-1485230905346-71acb9518d9c?w=800&q=80" 
                          alt="Craftsmanship" 
                          class="relative w-full h-[600px] object-cover grayscale hover:grayscale-0 transition-all duration-700">
                 </div>
@@ -433,7 +423,6 @@
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-6">
                 <div class="group cursor-pointer">
                     <div class="bg-stone aspect-square mb-4 overflow-hidden relative">
-                        <img src="https://images.unsplash.com/photo-1612023395494-1c2715992352?w=600&q=80" 
                              alt="Key Organizer" 
                              class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-105 transition-all duration-500">
                     </div>
@@ -442,7 +431,6 @@
                 </div>
                 <div class="group cursor-pointer">
                     <div class="bg-stone aspect-square mb-4 overflow-hidden relative">
-                        <img src="https://images.unsplash.com/photo-1618517047923-274616c4b956?w=600&q=80" 
                              alt="Phone Case" 
                              class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-105 transition-all duration-500">
                     </div>
@@ -451,7 +439,6 @@
                 </div>
                 <div class="group cursor-pointer">
                     <div class="bg-stone aspect-square mb-4 overflow-hidden relative">
-                        <img src="https://images.unsplash.com/photo-1628149455676-1e9d816ce07d?w=600&q=80" 
                              alt="Sunglasses Case" 
                              class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-105 transition-all duration-500">
                     </div>
@@ -460,7 +447,6 @@
                 </div>
                 <div class="group cursor-pointer">
                     <div class="bg-stone aspect-square mb-4 overflow-hidden relative">
-                        <img src="https://images.unsplash.com/photo-1544816155-12df9643f363?w=600&q=80" 
                              alt="Watch Roll" 
                              class="w-full h-full object-cover opacity-80 group-hover:opacity-100 group-hover:scale-105 transition-all duration-500">
                     </div>
